--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
 		"node": ">= 14 < 15"
 	},
 	"dependencies": {
+		"@emotion/cache": "^11.5.0",
+		"@emotion/react": "^11.5.0",
+		"@emotion/server": "^11.4.0",
+		"@emotion/styled": "^11.3.0",
+		"@mui/material": "^5.0.6",
 		"cors": "2.8.5",
 		"decimal.js": "10.3.1",
 		"express": "4.17.1",
 		"fs-extra": "10.0.0",
 		"jszip": "3.7.1",
-		"parse5": "6.0.1"
+		"next": "^12.0.2",
+		"parse5": "6.0.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
 	},
 	"devDependencies": {
 		"@tsconfig/node14": "^1.0.1",
@@ -26,6 +34,7 @@
 		"@types/mocha": "9.0.0",
 		"@types/node": "14.17.12",
 		"@types/parse5": "6.0.1",
+		"@types/react": "17.0.34",
 		"@typescript-eslint/eslint-plugin": "4.30.0",
 		"@typescript-eslint/parser": "4.30.0",
 		"@ubccpsc310/folder-test": "1.0.3",
@@ -33,6 +42,7 @@
 		"chai-as-promised": "7.1.1",
 		"chai-http": "4.3.0",
 		"eslint": "7.32.0",
+		"eslint-config-next": "12.0.2",
 		"eslint-plugin-import": "2.24.2",
 		"eslint-plugin-jsdoc": "36.1.0",
 		"mocha": "9.1.1",
