--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,7 @@
 	},
 	"include": [
 		"src/**/*.ts",
-		"test/**/*.ts",
-		"frontend/next-env.d.ts",
-		"frontend/**/*.ts",
-		"frontend/**/*.tsx"
+		"test/**/*.ts"
 	],
 	"exclude": [
 		"node_modules"
